--- a/index.html
+++ b/index.html
@@ -151,11 +151,11 @@
 							</section>
 							<section>
 								<h3>Phone</h3>
-								<p><a href="#">(909)655-7678</a></p>
+								<p><a href="tel:909-655-7678">(909)655-7678</a></p>
 							</section>
 							<section>
 								<h3>Email</h3>
-								<p><a href="www.gmail.com">sanaqusa@gmail.com</a></p>
+								<p><a href="mailto: sanaqusa@gmail.com">sanaqusa@gmail.com</a></p>
 							</section>
 							<section>
 								<h3>Social</h3>
